# 6502Emulator

./: .gitignore  6502main.cpp  6502main.h  6502tests.cpp  CMakeLists.txt
docs/: Docs.md  Obelisk Home Pages.html  ReadMe.md
src/: 6502main  6502main.cpp  6502main.h  CPU.cpp  CPU.h  Loader.cpp  Loader.h  Memory.cpp  Memory.h  types.h
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  gTests.cpp  test.cpp
